--- a/gameConfig/UIFiles/AssayInterface.fxml
+++ b/gameConfig/UIFiles/AssayInterface.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -17,7 +18,7 @@
         <Image url="@Media/menu.jpg" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
-    <Button fx:id="backButton3" layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButton3Clicked" text="Back" />
+    <Button id="backButton3" fx:id="assayBackButton" layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#assayBackButtonClicked" text="Back" />
     <Text layoutX="207.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Assay Office!">
       <font>
         <Font size="15.0" />
